# ogs5-nw

./: .gitmodules  CMakeLists.txt  Doxyfile  FEM.cmake  GUI.cmake  LICENSE.txt
Base/: CMakeLists.txt  Configure.h.in  FileFinder.h  FileTools.cpp  FileTools.h  Histogram.h  StringTools.cpp  StringTools.h  binarySearch.h  display.cpp  display.h  makros.h  wait.h
CMakeConfiguration/: CMakeSetup.cmake  CompilerSetup.cmake  Find.cmake  FindLibGeoTiff.cmake  FindMKL.cmake  GeneralProjectSetup.cmake  Macros.cmake
EQL/: eqlink.cpp
FEM/: BoundaryCondition.cpp  BoundaryCondition.h  CMakeLists.txt  DUMUX.cpp  DUMUX.h  DistributionInfo.cpp  DistributionInfo.h  DistributionTools.cpp  DistributionTools.h  Eclipse.cpp  Eclipse.h  FEMCondition.cpp  FEMCondition.h  FEMEnums.cpp  FEMEnums.h  GeoInfo.cpp  InitialCondition.cpp  InitialCondition.h  LinearFunctionData.cpp  LinearFunctionData.h  Output.cpp  Output.h  ShapeFunctionPool.cpp  ShapeFunctionPool.h  ShapeFunctionPool_impl.h  SourceTerm.cpp  SourceTerm.h  SparseMatrixDOK.cpp  display.cpp  display.h  eos.cpp  equation_class.cpp  equation_class.h  fct_mpi.cpp  fem_ele.cpp  fem_ele.h  fem_ele_std.cpp  fem_ele_std.h  fem_ele_std1.cpp  fem_ele_vec.cpp  (+61 more)
FileIO/: CMakeLists.txt  FEFLOWInterface.cpp  FEFLOWInterface.h  GMSHInterface.cpp  GMSHInterface.h  GMSInterface.cpp  OGSIOVer4.cpp  OpenGeoSysCond.xsd  SHPInterface.cpp  Writer.cpp  Writer.h  XMLInterface.cpp  XMLInterface.h  XmlCndInterface.cpp  XmlCndInterface.h  XmlGmlInterface.cpp  XmlGmlInterface.h  XmlGspInterface.cpp  XmlGspInterface.h  XmlStnInterface.cpp  XmlStnInterface.h  readNonBlankLineFromInputStream.cpp
FileIO/FEMIO/: GeoIO.cpp
FileIO/GeoIO/: Gmsh2GeoIO.cpp  OGSmsh2GeoIO.cpp  OGSmsh2GeoIO.h
FileIO/MathIO/: CRSIO.h
FileIO/MeshIO/: GMSHAdaptiveMeshDensity.cpp  GMSHAdaptiveMeshDensity.h  GMSHFixedMeshDensity.cpp  GMSHFixedMeshDensity.h  GMSHFixedMeshDensityStrategy.cpp  GMSHFixedMeshDensityStrategy.h  GMSHInterface.cpp  GMSHInterface.h  GMSHMeshDensityStrategy.h  GMSHNoMeshDensity.h  GMSHPolygonTree.cpp  GMSHPolygonTree.h  LegacyVtkInterface.cpp  LegacyVtkInterface.h  OGSMeshIO.cpp  OGSMeshIO.h  TetGenInterface.cpp  TetGenInterface.h  vtk.cpp
FileIO/XmlIO/: XMLInterface.cpp  XMLInterface.h  XmlCndInterface.cpp  XmlCndInterface.h  XmlGmlInterface.cpp  XmlGmlInterface.h  XmlGspInterface.cpp  XmlGspInterface.h  XmlLutReader.h  XmlStnInterface.cpp  XmlStnInterface.h
GEO/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  CMakeLists.txt  ClosestPair.h  DivideAndConquerClosestPair.cpp  GEOObjects.cpp  GEOObjects.h  Grid.h  OctTree.h  Point.cpp  Point.h  PointVec.cpp  PointVec.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  ProjectData.cpp  ProjectData.h  QuadTree.h  SensorData.cpp  SensorData.h  Station.cpp  Station.h  Surface.cpp  Surface.h  SurfaceGrid.cpp  TemplateVec.h  Triangle.cpp  Triangle.h  geo_lib.cpp  geo_lin.cpp  geo_mathlib.cpp  geo_ply.cpp  geo_ply.h  geo_pnt.cpp  geo_sfc.cpp  geo_vol.cpp
MSH/: CMakeLists.txt  GridAdapter.cpp  GridAdapter.h  MSHEnums.cpp  MSHEnums.h  MeshGrid.cpp  MeshGrid.h  MeshNodesAlongPolyline.cpp  MeshNodesAlongPolyline.h  MeshQualityArea.cpp  MeshQualityArea.h  MeshQualityChecker.cpp  MeshQualityChecker.h  MeshQualityEquiAngleSkew.cpp  MeshQualityEquiAngleSkew.h  MeshQualityNormalisedArea.cpp  MeshQualityNormalisedArea.h  MeshQualityNormalisedVolumes.cpp  MeshQualityNormalisedVolumes.h  MeshQualityShortestLongestRatio.cpp  MeshQualityVolume.cpp  MeshQualityVolumes.cpp  MeshQualityVolumes.h  MshEditor.cpp  MshEditor.h  msh_edge.cpp  msh_edge.h  msh_elem.cpp  msh_elem.h  msh_faces.cpp  msh_faces.h  msh_gen.cpp  msh_lib.cpp  msh_lib.h  msh_lib_ext.cpp  msh_mesh.cpp  msh_mesh.h  msh_node.cpp  msh_node.h  msh_pnt.cpp
MSHGEOTOOLS/: ExtractMeshNodes.cpp  ExtractMeshNodes.h
MathLib/: AnalyticalGeometry.cpp  AnalyticalGeometry.h  CMakeLists.txt  EarClippingTriangulation.cpp  EarClippingTriangulation.h  EigenVectors.cpp  EigenVectors.h  LinearInterpolation.cpp  LinearInterpolation.h  LinkedTriangle.cpp  LinkedTriangle.h  MathTools.cpp  MathTools.h  Vector3.h
MathLib/InterpolationAlgorithms/: InverseDistanceInterpolation.h
MathLib/LinAlg/: DenseDirectLinearSolver.h  DirectLinearSolver.h  GaussAlgorithm.h  TriangularSolve.cpp  TriangularSolve.h
MathLib/PETSC/: PETScLinearSolver.cpp  PETScLinearSolver.h
OGS/: CMakeLists.txt  rf.cpp
OGSProject/: gs_project.cpp
Qt/DataView/: NetCdfConfigureDialog.cpp
Qt/Gui/: mainwindow.cpp
UTL/FileConverter/: CMakeLists.txt  ConvertGliToVtk.cpp  ConvertSHPToGLI.cpp  generateBCFromPolyline.cpp  generateBCandGLI.cpp  generateMatPropsFromMatID.cpp
UTL/MSHGEOTOOLS/: CMakeLists.txt  ExtractMeshNodes.cpp  ExtractMeshNodes.h  ExtractSurface.cpp  ModifyMeshProperties.cpp  convertOgsSurfaceMeshToGeometry.cpp  createMeshFromPolygon.cpp  filterMeshNodes.cpp  mainExtractMeshNodes.cpp  mainExtractSurface.cpp  mainModifyMeshProperties.cpp  mapGeoToDEM.cpp  mapGeoToMesh.cpp  removeMeshNodes.cpp  rotateMesh.cpp  testMeshSearchAlgorithms.cpp
UTL/VTK/: CMakeLists.txt  testMeshFromRaster.asc  testMeshFromRaster.cpp  testMeshFromRaster_result.msh
cmake/: CodeCoverage.cmake  FindMSVCRedist.cmake  FindMsysGit.cmake
cmake/findPETSC/: FindPETSc.cmake
scripts/: bench_info.rb  build_configs.sh  build_gui.sh  build_gui_osg.bat  commit_info.rb  process_benchmark_job.rb  run_benchmarks.sh
scripts/CMakeConfiguration/: CMakeSetup.cmake  Macros.cmake
scripts/base/: check_architecture_option_win.sh  configure_compiler.sh  configure_win_vs.sh  download_file_with_cmake.sh
scripts/doxygen/: Doxyfile.in
scripts/process_benchmark_job/: bench_info.rb  commit_info.rb  process_benchmark_job.rb
tests/: CMakeLists.txt  testGeo.cpp
tests/GEO/: TestPointInPolygon.cpp
tests/Qt/: CMakeLists.txt  QtTestBase.cpp  QtTestBase.h  QtTestrunner.cpp  TestHelperFunctions.cpp  TestHelperFunctions.h
tests/Qt/Geo/: TestGMSHFromGeo.cpp  TestGMSHFromGeo.h
tests/Qt/Vtk/: TestMeshFromRaster.cpp  TestMeshFromRaster.h
tests/Qt/gdiff/: CMakeLists.txt  gdiff.h
tests/data/GEO/: CMakeLists.txt
tests/gtest/: CMakeLists.txt
(+11 files in other folders)
